--- a/calc.css
+++ b/calc.css
@@ -4,7 +4,7 @@ body{
     justify-content: center;
     min-height: 100vh;
     align-items: center;
-    background-color: gray;
+    background-color: black;
 }
 
 /* Styling of main container */
