--- a/calc.css
+++ b/calc.css
@@ -1,6 +1,7 @@
 /* Centering the main container */
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     min-height: 100vh;
     align-items: center;
