--- a/calc.css
+++ b/calc.css
@@ -13,6 +13,7 @@ h1{
     color: rgb(37, 35, 35);
     margin-top: 45px;
     margin-bottom: 25px;
+    font-family: 'Nunito';
 }
 
 /* Styling of main container */
